src/snapshot_middleware/snapshots/librojo__snapshot_middleware__lua__test__plugin_from_vfs.snap
---
source: src/snapshot_middleware/lua.rs
expression: instance_snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: false
  glob_ignored_children: false
  instigating_source:
    Path: /foo.plugin.luau
  relevant_paths:
    - /foo.plugin.luau
    - /foo.meta.json5
  context: {}
  specified_id: ~
  middleware: ~
  schema: ~
name: foo
class_name: Script
properties:
  RunContext:
    Enum: 3
  Source:
    String: Hello there!
children: []
