src/snapshot_middleware/snapshots/librojo__snapshot_middleware__lua__test__runcontext_script_with_meta.snap
---
source: src/snapshot_middleware/lua.rs
expression: instance_snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: true
  instigating_source:
    Path: /foo.server.lua
  relevant_paths:
    - /foo.server.lua
    - /foo.meta.json
    - /foo.meta.jsonc
  context:
    emit_legacy_scripts: false
    decode_windows_invalid_chars: false
  specified_id: ~
  middleware: ~
  schema: ~
name: foo
class_name: Script
properties:
  RunContext:
    Enum: 1
  Source:
    String: Hello there!
children: []
